--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+	<!DOCTYPE HTML>
 
 <html>
 	<head>
@@ -19,7 +19,7 @@
 
 	</head>
 	<body>
-
+<center> <h1 style="color:white"> Hit Songs Collection </h1> </center>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -34,37 +34,61 @@
 					</header>
 
 				<!-- Main -->
-					<div id="main">
-						<article class="thumb">
-							<a href="images/fulls/01.jpg" id="start1" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
+<table style="width:100%" border="1">
+<tr>
+					<td>	<article class="thumb">
+							<img src="images/thumbs/01.jpg" alt="" width="304" height="236"/>
 							<h2>Vijay Song</h2>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/02.jpg" id="start2" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<button type="button" name="button" id="start1">Start</button>
+              <button type="button" name="button" id="stop1">Stop</button>
+						</article></td>
+					<td>	<article class="thumb">
+							<img src="images/thumbs/02.jpg" alt="" width="304" height="236" />
 							<h2>Surya Song</h2>
+							<button type="button" name="button" id="start2">Start</button>
+              <button type="button" name="button" id="stop2">Stop</button>
 							<p></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/03.jpg" id="start3" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
+						</article></td>
+
+						<td><article class="thumb">
+							<img src="images/thumbs/03.jpg" alt="" width="304" height="236"/>
 							<h2>Silamparasan Song</h2>
+							<button type="button" name="button" id="start3">Start</button>
+              <button type="button" name="button" id="stop3">Stop</button>
 							<p></p>
 						</article>
+					</td>
+	</tr>
+	<tr>
+<td>
 						<article class="thumb">
-							<a href="images/fulls/04.jpg" id="start4" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<img src="images/thumbs/04.jpg" alt="" width="304" height="236"/>
 							<h2>Dhanush Song</h2>
+							<button type="button" name="button" id="start4">Start</button>
+              <button type="button" name="button" id="stop4">Stop</button>
 							<p></p>
 						</article>
+		</td>
+		<td>
 						<article class="thumb">
-							<a href="images/fulls/05.jpg" id="start5" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
+							<img src="images/thumbs/05.jpg" alt="" width="304" height="236"/>
 							<h2>Jayamravi Song</h2>
+							<button type="button" name="button" id="start5">Start</button>
+              <button type="button" name="button" id="stop5">Stop</button>
 							<p></p>
 						</article>
+	</td>
+	<td>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" id="start6" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<img src="images/thumbs/06.jpg" alt="" width="304" height="236"/>
 							<h2>Rahman Song</h2>
+							<button type="button" name="button" id="start6">Start</button>
+              <button type="button" name="button" id="stop6">Stop</button>
 							<p></p>
 						</article>
-						</div>
+	</td>
+</tr>
+
 
 				<!-- Footer -->
 					<footer id="footer" class="panel">
